# MLOps-Course-Labs

./: .dockerignore  CHECKLIST.md  Dockerfile  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: logger_setup.py  model_utils.py
bruno/: opencollection.yml  valid_prediction.yml
mlartifacts/777727494989622042/3ff041e7c2a348eabf6fb1fc60b5a941/artifacts/: column_transformer.pkl
mlruns/0/: meta.yaml
mlruns/777727494989622042/: meta.yaml
mlruns/777727494989622042/714d76504c344a749282d52eec5838fb/: meta.yaml
mlruns/777727494989622042/714d76504c344a749282d52eec5838fb/metrics/: accuracy  f1  precision  recall
mlruns/777727494989622042/714d76504c344a749282d52eec5838fb/tags/: mlflow.log-model.history  mlflow.source.git.commit
mlruns/777727494989622042/7de4b6b4456641208354c50cfd40c03f/: meta.yaml
mlruns/777727494989622042/7de4b6b4456641208354c50cfd40c03f/metrics/: accuracy  f1  precision  recall
mlruns/777727494989622042/7de4b6b4456641208354c50cfd40c03f/tags/: mlflow.log-model.history  mlflow.source.name
mlruns/777727494989622042/datasets/ee58510a9b45eabc0c0539856f693e83/: meta.yaml
mlruns/777727494989622042/e21266c95f314638aea41427b51d352b/: meta.yaml
mlruns/777727494989622042/e21266c95f314638aea41427b51d352b/metrics/: accuracy  f1  precision  recall
mlruns/777727494989622042/e21266c95f314638aea41427b51d352b/tags/: mlflow.log-model.history
mlruns/models/Random Forest/: meta.yaml
mlruns/models/Random Forest/version-1/: meta.yaml
mlruns/models/SVM/: meta.yaml
src/: train.py
tests/: test_main.py
(+24 files in other folders)
