[project]
name = "churn-prediction-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "litestar[standard]>=2.21.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn==1.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
